[tool.poetry]
name = "hobart"
version = "1.1.1"
description = "Obtain cross sections of polygonal meshes"
authors = ["Paul Melnikow <github@paulmelnikow.com>", "Metabolize, Body Labs, and other contributors"]
license = "BSD-2-Clause"
include = ["CHANGELOG.md"]
exclude = ["**/test_*.py"]
homepage = "https://hobart.readthedocs.io/en/stable/"
repository = "https://github.com/lace/hobart"
documentation = "https://hobart.readthedocs.io/en/stable/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
numpy = "*"
polliwog = ">=2.0.0,<=3.0.0"
scipy = "*"
vg = ">=2.0.0"

[tool.poetry.dev-dependencies]
black = "21.12b0"
click = "8.0.1"
coverage = "5.5"
executor = "23.2"
flake8 = "3.9.2"
flake8-import-order = "0.18.1"
myst-parser = "0.15.2"
pytest = "6.2.5"
pytest-cov = "2.12.1"
Sphinx = "4.2.0"
sphinxcontrib-apidoc = "0.3.0"

[build-system]
# Lint requires setuptools.
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 100.0
omit = ["**/test_*.py"]
